install-ingress/deployment-with-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-with-ingress
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: centosadmin/reloadable-nginx:1.12
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: config
          configMap:
            name: my-configmap-env
...
